--- a/index.html
+++ b/index.html
@@ -207,23 +207,15 @@
         </div>
         <div class="nonloop-block-13 owl-carousel">
           
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="text-black">
-              <h3 class="font-weight-light h5">Megan Smith</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
-            </div>
-          </div>
+
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/person_2.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Brooke Cagle</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Vybz Kartel</h3>
+              <p class="font-italic">&ldquo;Jamaican reggae-dancehall recording artist, record producer and entrepreneur.&rdquo;</p>
             </div>
           </div>
 
@@ -232,38 +224,38 @@
               <img src="images/person_3.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Philip Martin</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Popcaan</h3>
+              <p class="font-italic">&ldquo;Jamaican dancehall artist, singer and songwriter from the parish of St. Thomas.&rdquo;</p>
             </div>
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+              <img src="images/1person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Steven Ericson</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Nipsey Hussle</h3>
+              <p class="font-italic">&ldquo;American rapper, entrepreneur, and community activist.&rdquo;</p>
             </div>
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/person_2.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+              <img src="images/1person_2.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Nathan Dumlao</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Bob Marley</h3>
+              <p class="font-italic">&ldquo;Jamaican singer and songwriter. Considered one of the pioneers of reggae.&rdquo;</p>
             </div>
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/person_4.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+              <img src="images/1person_4.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Brook Smith</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">DJ Khaled</h3>
+              <p class="font-italic">&ldquo;American DJ, record executive, songwriter, record producer and media personality.&rdquo;</p>
             </div>
           </div>
 
